--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<div id="main">
-<a class="btn" style="text-align:center; href="">Click me</a>
+<div id="main" style="text-align:center; >
+<a class="btn" href="">Click me</a>
 </div>
 
 <style>
