--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <div id="main" style="text-align:center; >
-<a class="btn" href="">Click me</a>
+<a id="btn" href="">Click me</a>
 </div>
 
 <style>
-  .btn {
+  #btn {
   -webkit-border-radius: 28;
   -moz-border-radius: 28;
   border-radius: 28px;
@@ -15,7 +15,7 @@
   text-decoration: none;
 }
 
-.btn:hover {
+#btn:hover {
   background: #3cb0fd;
   text-decoration: none;
 }
