--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <div id="main" style="text-align:center; >
-<a class="btn" href="">Click me</a>
+                      
+<a class="btn" href="https://www.southsidechabad.com/">Click me</a>
+                      
 </div>
 
 <style>
