--- a/Button.html
+++ b/Button.html
@@ -1,6 +1,8 @@
 <div id="main">
+  <div id="main2">
 <p style="text-align: center;"><a class="btnn" href="">Click me</a></p>
 </div>
+  </div>
 <style type="text/css">.btnn {
   -webkit-border-radius: 28;
   -moz-border-radius: 28;
@@ -11,6 +13,7 @@
   background: #3498db;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
+  transition-duration: 0.5s;
 }
 .btnn:hover {
   background: #3cb0fd;
