--- a/Button.html
+++ b/Button.html
@@ -26,5 +26,11 @@ div#main {
 div#main:hover {
     padding-left: 999px;
 }
+  div#main2:hover {
+    padding-top: 999px;
+}
+div#main2 {
+    transition-duration: 0.5s;
+}
 </style>
 <p></p>
