--- a/Button.html
+++ b/Button.html
@@ -48,5 +48,12 @@ div#main4:hover {
 div#main4 {
     transition-duration: 0.5s;
 }
+.body::-webkit-scrollbar {
+  display: none;
+}
+.body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
 </style>
 <p></p>
