--- a/Button.html
+++ b/Button.html
@@ -55,5 +55,8 @@ div#main4 {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+  body {
+  overflow: hidden; /* Hide scrollbars */
+}
 </style>
 <p></p>
