--- a/Button.html
+++ b/Button.html
@@ -60,3 +60,11 @@ div#main4 {
 }
 </style>
 <p></p>
+
+<script type="text/javascript">
+<!--
+if (screen.width <= 699) {
+document.location = "mobileno.html";
+}
+//-->
+</script>
