--- a/Animation-test.html
+++ b/Animation-test.html
@@ -1,2 +1,11 @@
 <div id="animation">
+  
   </div>
+
+#animation {
+background: linear-gradient(154deg, #47daff 0%,#ff00ea 100%,#9100ff 100%);
+background: -moz-linear-gradient(154deg, #47daff 0%,#ff00ea 100%,#9100ff 100%);
+background: -webkit-linear-gradient(154deg, #47daff 0%,#ff00ea 100%,#9100ff 100%);
+border-radius: 10px 10px 10px 10px;
+box-shadow: 7px 8px 12px #e8e8e8;
+}
