--- a/Animation-test.html
+++ b/Animation-test.html
@@ -2,6 +2,7 @@
   <span class="blank"></span>
   </div>
 
+<style>
 #animation {
 background: linear-gradient(154deg, #47daff 0%,#ff00ea 100%,#9100ff 100%);
 background: -moz-linear-gradient(154deg, #47daff 0%,#ff00ea 100%,#9100ff 100%);
@@ -9,3 +10,4 @@ background: -webkit-linear-gradient(154deg, #47daff 0%,#ff00ea 100%,#9100ff 100%
 border-radius: 10px 10px 10px 10px;
 box-shadow: 7px 8px 12px #e8e8e8;
 }
+</style>
