--- a/Animation-test.html
+++ b/Animation-test.html
@@ -6,5 +6,22 @@ background: linear-gradient(154deg, #47daff 0%,#ff00ea 100%,#9100ff 100%);
 background: -moz-linear-gradient(154deg, #47daff 0%,#ff00ea 100%,#9100ff 100%);
 border-radius: 10px 10px 10px 10px;
 box-shadow: 7px 8px 12px #e8e8e8;
+animation-name: back;
+}
+div#animation {
+    min-width: 100%;
+    min-height: 100%;
+}
+  @keyframes back {
+  from {
+      background: linear-gradient(
+154deg
+, #47daff 0%,#ff00ea 100%,#9100ff 100%);
+}
+  to {
+  background: linear-gradient(
+154deg
+, #ff00ea 0%,#47daff 100%,#9100ff 100%);
+}
 }
 </style>
