--- a/Illusion.html
+++ b/Illusion.html
@@ -5,10 +5,13 @@ div#box {
     max-width: 150px;
     min-height: 150px;
     background-color: #808182;
-    display: flex;
-    justify-content: center;
     margin: auto;
-    transition-duration: 3s;
+    /* transition-duration: 3s; */
+    position: relative;
+    transition-duration: 1s;
+    -webkit-transition-duration: 1s;
+    -moz-transition-duration: 1s;
+    margin-top: 40px;
 }
   body {
     background: linear-gradient(
