--- a/Illusion.html
+++ b/Illusion.html
@@ -1,4 +1,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<div id="textb">
+<p id="text">The box is not changing colors</p>
+</div>
+<style type="text/css">p#text {
+    background: #ebebeb;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    margin: auto!important;
+    max-width: 306px;
+    font-size: 20px;
+    font-family: system-ui;
+    font-weight: 500;
+}
+</style>
 <div id="box"><div>
 <style>
 div#box {
