--- a/Illusion.html
+++ b/Illusion.html
@@ -12,6 +12,9 @@
     font-size: 20px;
     font-family: system-ui;
     font-weight: 500;
+    position: absolute;
+    top: 8px;
+}
 }
 </style>
 <div id="box"><div>
