--- a/move.html
+++ b/move.html
@@ -1,3 +1,4 @@
+<!--JavaScript adpted from code by Eric Howe and empiric-->
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,35 +17,35 @@
 <script>
   var pressed = false;
 $(document).keydown(function(e) {
-    if(!pressed){ //only start animation once
+    if(!pressed){ 
         width = $(this).width();
         height = $(this).height();
         switch (e.which) {
             case 37:
                 $('div').stop().animate({
-                    left: '-=' + width //allow the user the move the div over the whole doc
+                    left: '-=' + width
                 }, 2000); //left arrow key
                 break;
             case 38:
                 $('div').stop().animate({
-                    top: '-=' + width //allow the user the move the div over the whole doc
+                    top: '-=' + width
                 }, 2000); //up arrow key
                 break;
              case 39:
                 $('div').stop().animate({
-                    left: '+=' + width //allow the user the move the div over the whole doc
+                    left: '+=' + width
                 }, 2000); //right arrow key
                 break;
              case 40:
                 $('div').stop().animate({
-                    top: '+=' + width //allow the user the move the div over the whole doc
+                    top: '+=' + width
                 }, 2000); //bottom arrow key
                 break;
        }
     }
     pressed = true;
 }).keyup(function(){
-    $('div').stop(); // stop the current animation
+    $('div').stop();
     pressed = false;
 });
   </script>
