--- a/move.html
+++ b/move.html
@@ -3,6 +3,24 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<div id="textb">
+<p id="text">Control the box with the arrow keys</p>
+</div>
+<style type="text/css">p#text {
+    background: #ebebeb;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    margin: auto!important;
+    max-width: 306px;
+    font-size: 20px;
+    font-family: system-ui;
+    font-weight: 500;
+    position: absolute;
+    top: 8px;
+}
+}
+</style>
 <div></div>
 <style>
   div{
