--- a/move.html
+++ b/move.html
@@ -40,7 +40,7 @@ $(document).keydown(function(e) {
         height = $(this).height();
         switch (e.which) {
             case 37:
-                $('3box').stop().animate({
+                $('#box').stop().animate({
                     left: '-=' + width
                 }, 1000); //left arrow key
                 break;
