--- a/move.html
+++ b/move.html
@@ -18,7 +18,7 @@
     font-weight: 500;
     position: absolute;
     top: 8px;
-    right: 8px;
+    left: 8px;
 }
 }
 </style>
@@ -29,8 +29,8 @@
     height:100px;
     width:100px;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 200;
+    left: 450px;
 }
 </style>
 <script>
