--- a/move.html
+++ b/move.html
@@ -1,5 +1,12 @@
 <!--JavaScript adpted from code by Eric Howe and empiric-->
 <head>
+<script type="text/javascript">
+<!--
+if (screen.width <= 699) {
+document.location = "mobileno.html";
+}
+//-->
+</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
