--- a/index.html
+++ b/index.html
@@ -1,24 +1,76 @@
-<div id="main" style="text-align:center; >
-                      
-<a class="btn" href="https://www.southsidechabad.com/">Click me</a>
-                      
-</div>
+<div class="bgImage"></div>
+<svg class="blobCont">
+		<image xlink:href="https://github.com/ShneurNovack/Stuff/blob/Images/gradient%20for%20website.png?raw=true" mask="url(#mask)" width="100%" height="100%" preserveAspectRatio="xMidYMid slice" />
+      <defs>
+      <filter id="gooey" height="130%">
+				<feGaussianBlur in="SourceGraphic" stdDeviation="15" result="blur" />
+				<feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
+    	</filter>
+    </defs>
+			<mask id="mask" x="0" y="0">
+				<g style="filter: url(#gooey)">
+          <circle class="blob" cx="10%" cy="10%" r="80" fill="white" stroke="white"/>
+					<circle class="blob" cx="50%" cy="10%" r="40" fill="white" stroke="white"/>
+					<circle class="blob" cx="17%" cy="15%" r="70" fill="white" stroke="white"/>
+					<circle class="blob" cx="90%" cy="20%" r="120" fill="white" stroke="white"/>
+					<circle class="blob" cx="30%" cy="25%" r="30" fill="white" stroke="white"/>
+          <circle class="blob" cx="50%" cy="60%" r="80" fill="white" stroke="white"/>
+					<circle class="blob" cx="70%" cy="90%" r="10" fill="white" stroke="white"/>
+					<circle class="blob" cx="90%" cy="60%" r="90" fill="white" stroke="white"/>
+					<circle class="blob" cx="30%" cy="90%" r="80" fill="white" stroke="white"/>
+          <circle class="blob" cx="10%" cy="10%" r="80" fill="white" stroke="white"/>
+					<circle class="blob" cx="50%" cy="10%" r="20" fill="white" stroke="white"/>
+					<circle class="blob" cx="17%" cy="15%" r="70" fill="white" stroke="white"/>
+					<circle class="blob" cx="40%" cy="20%" r="120" fill="white" stroke="white"/>
+					<circle class="blob" cx="30%" cy="25%" r="30" fill="white" stroke="white"/>
+          <circle class="blob" cx="80%" cy="60%" r="80" fill="white" stroke="white"/>
+					<circle class="blob" cx="17%" cy="10%" r="100" fill="white" stroke="white"/>
+					<circle class="blob" cx="40%" cy="60%" r="90" fill="white" stroke="white"/>
+					<circle class="blob" cx="10%" cy="50%" r="80" fill="white" stroke="white"/>
+				</g>
+			</mask>
+	</svg>
 
 <style>
-  .btn {
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
-  border-radius: 28px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 20px;
-  background: #3498db;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
+  body,
+.bgImage {
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
 
-.btn:hover {
-  background: #3cb0fd;
-  text-decoration: none;
+.bgImage {
+  position: absolute;
+  background-image: url();
+  background-size: cover;
+  background-position: top;
+  -webkit-filter: grayscale(70%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(70%);
+  z-index: -1;
+}
+
+.blobCont {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+}
+
+@for $i from 1 through 18 {
+  $a: #{$i*90};
+  $b: #{$i*90+360};
+
+  .blob:nth-child(#{$i}) {
+    animation: move#{$i} 20s infinite linear;
+  }
+
+  @keyframes move#{$i} {
+    from {
+      transform: rotate(#{$a}deg) translate(200px, 0.1px) rotate(-#{$a}deg);
+    }
+    to {
+      transform: rotate(#{$b}deg) translate(200px, 0.1px) rotate(-#{$b}deg);
+    }
+  }
 }
 </style>
