--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</svg>
 
 <style>
-  body,
+	body,
 .bgImage {
   margin: 0;
   height: 100%;
@@ -42,7 +42,7 @@
 
 .bgImage {
   position: absolute;
-  background-image: url();
+  background: #fff;
   background-size: cover;
   background-position: top;
   -webkit-filter: grayscale(70%); /* Safari 6.0 - 9.0 */
@@ -74,26 +74,3 @@
   }
 }
 </style>
-<script>
-	 TweenMax.staggerFromTo('.blob', 20 ,{
- cycle: {
- attr:function(i) {
- var r = i*90;
- return {
- transform:'rotate('+r+') translate( 200 ,0.1) rotate(-'+r+') '
- }      
- }
- }  
- },{
- cycle: {
- attr:function(i) {
- var r = i*90+360;
- return {
- transform:'rotate('+r+') translate( 200 ,0.1) rotate(-'+r+')'
- }      
- }
- },
- ease:Linear.easeNone,
- repeat:-1
- });
-</script>
