--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
+#main {
+  background: #123456;
+  top: 10px;
+  z-index: 500px;
+  min-height: 200px;
+  max-width: 200px;
+}
 body, .bgImage {
 	 margin: 0;
 	 height: 100%;
@@ -221,6 +228,8 @@ body, .bgImage {
 }
 </style>
 
+<div id="main">
+  </div>
 <div class="bgImage"></div>
 <svg class="blobCont">
 		<image xlink:href="https://github.com/ShneurNovack/Stuff/blob/Images/gradient%20for%20website.png?raw=true" mask="url(#mask)" width="100%" height="100%" preserveAspectRatio="xMidYMid slice" />
