--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 #main {
-  background: #123456;
-  top: 10px;
-  z-index: 500px;
-  min-height: 200px;
-  max-width: 200px;
+    background: #ffffffa1;
+    z-index: 1000;
+    max-height: 80%;
+    position: absolute;
+    max-width: 50%;
+    display: flex;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    box-shadow: rgb(255 255 255 / 10%) 0px 1px 1px 0px inset, rgb(50 50 93 / 25%) 0px 50px 100px -20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px;
+    backdrop-filter: blur(10px);
 }
 body, .bgImage {
 	 margin: 0;
