--- a/index.html
+++ b/index.html
@@ -249,24 +249,24 @@ body, .bgImage {
 				<feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
     	</filter>
     </defs>
-			<mask id="mask" x="0" y="0">
+			mask id="mask" x="0" y="0">
 				<g style="filter: url(#gooey)">
           <circle class="blob" cx="10%" cy="10%" r="130" fill="white" stroke="white"/>
-					<circle class="blob" cx="50%" cy="10%" r="100" fill="white" stroke="white"/>
+					<circle class="blob" cx="72%" cy="10%" r="100" fill="white" stroke="white"/>
 					<circle class="blob" cx="17%" cy="15%" r="120" fill="white" stroke="white"/>
-					<circle class="blob" cx="57%" cy="40%" r="140" fill="white" stroke="white"/>
+					<circle class="blob" cx="57%" cy="40%" r="220" fill="white" stroke="white"/>
 					<circle class="blob" cx="30%" cy="25%" r="130" fill="white" stroke="white"/>
           <circle class="blob" cx="50%" cy="60%" r="100" fill="white" stroke="white"/>
 					<circle class="blob" cx="70%" cy="90%" r="170" fill="white" stroke="white"/>
 					<circle class="blob" cx="90%" cy="60%" r="140" fill="white" stroke="white"/>
 					<circle class="blob" cx="30%" cy="90%" r="130" fill="white" stroke="white"/>
           <circle class="blob" cx="10%" cy="10%" r="100" fill="white" stroke="white"/>
-					<circle class="blob" cx="50%" cy="10%" r="120" fill="white" stroke="white"/>
+					<circle class="blob" cx="20%" cy="10%" r="120" fill="white" stroke="white"/>
 					<circle class="blob" cx="17%" cy="15%" r="140" fill="white" stroke="white"/>
 					<circle class="blob" cx="40%" cy="20%" r="130" fill="white" stroke="white"/>
 					<circle class="blob" cx="37%" cy="25%" r="100" fill="white" stroke="white"/>
-          <circle class="blob" cx="37%" cy="60%" r="100" fill="white" stroke="white"/>
-					<circle class="blob" cx="17%" cy="10%" r="140" fill="white" stroke="white"/>
+          <circle class="blob" cx="67%" cy="60%" r="100" fill="white" stroke="white"/>
+					<circle class="blob" cx="47%" cy="10%" r="140" fill="white" stroke="white"/>
 					<circle class="blob" cx="40%" cy="60%" r="130" fill="white" stroke="white"/>
 					<circle class="blob" cx="10%" cy="50%" r="120" fill="white" stroke="white"/>
 				</g>
