--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ body, .bgImage {
 				<feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
     	</filter>
     </defs>
-			mask id="mask" x="0" y="0">
+			<mask id="mask" x="0" y="0">
 				<g style="filter: url(#gooey)">
           <circle class="blob" cx="10%" cy="10%" r="130" fill="white" stroke="white"/>
 					<circle class="blob" cx="72%" cy="10%" r="100" fill="white" stroke="white"/>
