--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     margin: auto;
     box-shadow: rgb(255 255 255 / 10%) 0px 1px 1px 0px inset, rgb(50 50 93 / 25%) 0px 50px 100px -20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px;
     backdrop-filter: blur(10px);
+    border-radius: 25px;
 }
 body, .bgImage {
 	 margin: 0;
