--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+h1 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 70px;
+    margin: auto;
+    position: relative;
+}
 #main {
     background: #ffffffa1;
     z-index: 1000;
@@ -240,6 +247,7 @@ body, .bgImage {
 </style>
 
 <div id="main">
+	<h1>Stuff</h1>
   </div>
 <div class="bgImage"></div>
 <svg class="blobCont">
