--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 h1 {
     font-family: 'Poppins', sans-serif;
     font-size: 70px;
-    margin: auto;
     position: relative;
+    margin-left: auto;
+    margin-right: auto;
 }
 #main {
     background: #ffffffa1;
