--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
+.button {
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    margin: auto;
+    position: relative;
+    background: #123456;
+    padding: 10px;
+    margin: 10px;
+    color: white;
+    width: 100%;
+    text-decoration: none;
+}
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 h1 {
     font-family: 'Poppins', sans-serif;
@@ -249,6 +261,10 @@ body, .bgImage {
 
 <div id="main">
 	<h1>Stuff</h1>
+	<a href="#" class="button">Link Button</a>
+	<a href="#" class="button">Link Button</a>
+	<a href="#" class="button">Link Button</a>
+	<a href="#" class="button">Link Button</a>
   </div>
 <div class="bgImage"></div>
 <svg class="blobCont">
