--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@ h1 {
     box-shadow: rgb(255 255 255 / 10%) 0px 1px 1px 0px inset, rgb(50 50 93 / 25%) 0px 50px 100px -20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px;
     backdrop-filter: blur(10px);
     border-radius: 25px;
+    justify-content: flex-start;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    align-content: center;
 }
 body, .bgImage {
 	 margin: 0;
