--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 .button {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+}
+.button {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     margin: auto;
