--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     font-size: 15px;
     margin: auto;
     position: relative;
-    background: #123456;
+    background: #ffffff9e;
     padding: 10px;
     margin: 10px;
-    color: white;
+    color: #000000;
     width: 100%;
     text-decoration: none;
+    border: solid 3px #000000;
 }
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 h1 {
