--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
+.button:hover {
+    background: black;
+    color: white;
+}
 .button {
     width: 80%;
     display: flex;
     justify-content: center;
+    transition-duration: 0.2s;
 }
 .button {
     font-family: 'Poppins', sans-serif;
