--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
+@media only screen and (max-width: 600px) {
+div#main {
+    max-width: 80%!important;
+}
+}
 .button:hover {
     background: black;
     color: white;
