--- a/index.html
+++ b/index.html
@@ -282,10 +282,12 @@ body, .bgImage {
 
 <div id="main">
 	<h1>Stuff</h1>
+	<div id="theStuff">
 	<a href="#" class="button">Link Button</a>
 	<a href="#" class="button">Link Button</a>
 	<a href="#" class="button">Link Button</a>
 	<a href="#" class="button">Link Button</a>
+	</div>
   </div>
 <div class="bgImage"></div>
 <svg class="blobCont">
