--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
+#theStuff {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.button {
+    width: 210px;
+}
 @media only screen and (max-width: 600px) {
 div#main {
     max-width: 80%!important;
