--- a/index.html
+++ b/index.html
@@ -291,10 +291,10 @@ body, .bgImage {
 <div id="main">
 	<h1>Stuff</h1>
 	<div id="theStuff">
-	<a href="#" class="The Button">Link Button</a>
-	<a href="#" class="Movable Div">Link Button</a>
-	<a href="#" class="Color Illusion">Link Button</a>
-	<a href="#" class="CSS Animation Tests">Link Button</a>
+	<a href="#" class="button">The Button</a>
+	<a href="#" class="button">Movable Div</a>
+	<a href="#" class="button">Color Illusion</a>
+	<a href="#" class="button">CSS Animation Tests</a>
 	</div>
   </div>
 <div class="bgImage"></div>
