--- a/index.html
+++ b/index.html
@@ -294,10 +294,10 @@ body, .bgImage {
 <div id="main">
 	<h1>Stuff</h1>
 	<div id="theStuff">
-	<a href="#" class="button">The Button</a>
-	<a href="#" class="button">Movable Div</a>
-	<a href="#" class="button">Color Illusion</a>
-	<a href="#" class="button">CSS Animation Tests</a>
+	<a href="http://stuff.shneurnovack.com/Button.html" class="button">The Button</a>
+	<a href="http://stuff.shneurnovack.com/move.html" class="button">Movable Div</a>
+	<a href="http://stuff.shneurnovack.com/Illusion.html" class="button">Color Illusion</a>
+	<a href="http://stuff.shneurnovack.com/Animation-test.html" class="button">CSS Animation Tests</a>
 	</div>
   </div>
 <div class="bgImage"></div>
