--- a/Animation-test.html
+++ b/Animation-test.html
@@ -18,6 +18,8 @@
 </div>
 <div id="box10" class="box3">
 </div>
+<div id="box11" class="box">
+</div>
 
 <style>
   .box {
@@ -109,7 +111,12 @@
     animation-name: animation2;
     left: 0px;
 }
-
+#box7 {
+  animation-name: animation1;
+  right: 0px;
+  margin-top: 800px;
+}
+  
 @keyframes animation1 {
   0%   {
     right: 0px;
