--- a/Animation-test.html
+++ b/Animation-test.html
@@ -115,6 +115,7 @@
   animation-name: animation1;
   right: 0px;
   margin-top: 800px;
+      height: 50px!important;
 }
   
 @keyframes animation1 {
