--- a/Animation-test.html
+++ b/Animation-test.html
@@ -160,12 +160,12 @@
    height: 0px;
   }
     55%   {
-    height: 100%;
+    height: 999px;
         top: 0px;
       width: 100px;
 }
     72%   {
-    height: 100%;
+    height: 999px;
         width: 0px;
 }
       73%   {
@@ -181,11 +181,11 @@
    height: 0px;
   }
     55%   {
-    height: 100%;
+    height: 999px;
         top: 0px;
 }
         56%   {
-    height: 100%;
+    height: 999px;
         bottom: 0px;
         top: unset;
 }
