--- a/Animation-test.html
+++ b/Animation-test.html
@@ -161,12 +161,12 @@
    height: 0px;
   }
     55%   {
-    height: 1200px;
+    height: 100%;
         top: 0px;
       width: 100px;
 }
     72%   {
-    height: 1200px;
+    height: 100%;
         width: 0px;
 }
       73%   {
@@ -182,11 +182,11 @@
    height: 0px;
   }
     55%   {
-    height: 1200px;
+    height: 100%;
         top: 0px;
 }
         56%   {
-    height: 1200px;
+    height: 100%;
         bottom: 0px;
         top: unset;
 }
