--- a/Animation-test.html
+++ b/Animation-test.html
@@ -23,7 +23,12 @@
 
 <style>
   body {
-  overflow: hidden; 
+  overflow: hidden;
+  background-image: url(https://github.com/ShneurNovack/Stuff/blob/Images/HNae3T.jpg?raw=true);
+  background-color: #cccccc;
+  animation-name: image;
+  animation-iteration-count: infinite;
+  animation-duration: 5s;
 }
   .box {
     border: 1px solid transparent;
@@ -197,5 +202,19 @@
         bottom: 0px;
         top: unset;
 }
+}
+  
+    @keyframes image {
+  45% {
+    background-image: url(https://github.com/ShneurNovack/Stuff/blob/Images/HNae3T.jpg?raw=true);
+  }
+
+  50% {
+    background-image: url(https://github.com/ShneurNovack/Stuff/blob/Images/ZiClJf-1920w.jpg?raw=true);
+  }
+    
+  100% {
+    background-image: url(https://github.com/ShneurNovack/Stuff/blob/Images/ZiClJf-1920w.jpg?raw=true);
+  }
 }
 </style>
