--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ body, .bgImage {
 	<a href="http://stuff.shneurnovack.com/Button.html" class="button">The Button</a>
 	<a href="http://stuff.shneurnovack.com/move.html" class="button">Movable Div</a>
 	<a href="http://stuff.shneurnovack.com/Illusion.html" class="button">Color Illusion</a>
-	<a href="http://stuff.shneurnovack.com/Animation-test.html" class="button">CSS Animation Tests</a>
+	<a href="http://stuff.shneurnovack.com/Animation-test.html" class="button">CSS Animated Loading Transition Test</a>
 	</div>
   </div>
 <div class="bgImage"></div>
