--- a/Animation-test.html
+++ b/Animation-test.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <div id="box1" class="box">
 </div>
 <div id="box2" class="box">
