--- a/game1.html
+++ b/game1.html
@@ -140,8 +140,8 @@
   height: 50px;
   width: 50px;
   position: absolute;
-  top: 200;
-  left: 450px;
+  top: 50;
+  left: 50%;
   z-index: 3;
 }
 p#text {
