--- a/game1.html
+++ b/game1.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <div id="textb">
-  <p id="text">Control the box with the arrow keys</p>
+  <p id="text">Control the blue box with the arrow keys, dont touch anything grey</p>
   <div id="state">You Lose!
     <button type="button" onClick="refreshPage()">Try Again</button>
   </div>
