--- a/game1.html
+++ b/game1.html
@@ -28,6 +28,10 @@
   <button type="button" onClick="refreshPage()">Play Again</button>
 </div>
 <div id="dark"></div>
+<div id="border" class="borderTop"></div>
+<div id="border" class="borderBottom"></div>
+<div id="border" class="borderLeft"></div>
+<div id="border" class="borderRight"></div>
 
 <script>
   function refreshPage() {
@@ -36,6 +40,42 @@
 </script>
 
 <style>
+  .borderRight {
+  background: #ccc;
+  height: 100%;
+  width: 10px;
+  position: absolute;
+  right: 0px;
+  z-index: 30;
+  display: flex;
+}
+.borderLeft {
+  background: #ccc;
+  height: 100%;
+  width: 10px;
+  position: absolute;
+  left: 0px;
+  z-index: 30;
+  display: flex;
+}
+.borderBottom {
+  background: #ccc;
+  height: 10px;
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
+  z-index: 30;
+  display: flex;
+}
+.borderTop {
+  background: #ccc;
+  height: 10px;
+  width: 100%;
+  position: absolute;
+  top: 0px;
+  z-index: 30;
+  display: flex;
+}
   body {
   overflow: hidden;
 }
