--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ body, .bgImage {
 	<a href="http://stuff.shneurnovack.com/move.html" class="button">Movable Div</a>
 	<a href="http://stuff.shneurnovack.com/Illusion.html" class="button">Color Illusion</a>
 	<a href="http://stuff.shneurnovack.com/Animation-test.html" class="button">Loading Transition Test</a>
-	<a href="https://stuff.shneurnovack.com/game1.html" class="button">Pure HTML/Java Game</a>
+	<a href="https://stuff.shneurnovack.com/game1.html" class="button">HTML div Obstacle Game</a>
 	</div>
   </div>
 <div class="bgImage"></div>
