--- a/game1.html
+++ b/game1.html
@@ -268,6 +268,9 @@ div#box {
     width: 100%;
   }
 }
+  body {
+    box-shadow: rgb(50 50 93 / 25%) 0px 30px 60px -12px inset, rgb(0 0 0 / 30%) -2px 0px 20px 8px inset;
+}
 </style>
 
 <script>
