--- a/game1.html
+++ b/game1.html
@@ -197,8 +197,9 @@ p#text {
   font-family: system-ui;
   font-weight: 500;
   position: absolute;
-  top: 8px;
-  left: 8px;
+  top: 25px;
+  left: 25px;
+  box-shadow: rgb(50 50 93 / 25%) 0px 13px 27px -5px, rgb(0 0 0 / 30%) 0px 8px 16px -8px;
 }
 #state {
   position: absolute;
