--- a/Animation-test.html
+++ b/Animation-test.html
@@ -23,6 +23,10 @@
 </div>
 
 <style>
+  #box1 {
+    top: 0px;
+    height: 107px;
+}
   body {
   overflow: hidden;
   background-image: url(https://github.com/ShneurNovack/Stuff/blob/Images/HNae3T.jpg?raw=true);
