--- a/chromemario.html
+++ b/chromemario.html
@@ -1,4 +1,4 @@
-<html dir="ltr" lang="en" class="offline"><head>
+<html dir="ltr" lang="en"><head>
   <meta charset="utf-8">
   <meta name="color-scheme" content="light dark">
   <meta name="theme-color" content="#fff">
