--- a/robotpuppet.html
+++ b/robotpuppet.html
@@ -1,3 +1,4 @@
+  <p id="text">Control by holding and draging the bottom right corder of the mouth</p>
 <div id="main">
 <div id="face">
   <div id="eyeC">
@@ -16,6 +17,20 @@
 </div>
   
   <style>
+    p#text {
+  background: #ebebeb;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  margin: auto !important;
+  max-width: 306px;
+  font-size: 16px;
+  font-family: system-ui;
+  font-weight: 500;
+  position: absolute;
+  top: 8px;
+  left: 8px;
+}
     div#face {
     background-size: cover;
     background-attachment: fixed;
