--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@ body, .bgImage {
 	<a href="http://stuff.shneurnovack.com/Illusion.html" class="button">Color Illusion</a>
 	<a href="http://stuff.shneurnovack.com/Animation-test.html" class="button">Loading Transition Test</a>
 	<a href="https://stuff.shneurnovack.com/game1.html" class="button">HTML div Obstacle Game</a>
+	<a href="https://stuff.shneurnovack.com/robotpuppet.html" class="button">Robot Puppet</a>
 	</div>
   </div>
 <div class="bgImage"></div>
