--- a/index.html
+++ b/index.html
@@ -294,11 +294,8 @@ body, .bgImage {
 <div id="main">
 	<h1>Stuff</h1>
 	<div id="theStuff">
-	<a href="http://stuff.shneurnovack.com/Button.html" class="button">The Button</a>
 	<a href="http://stuff.shneurnovack.com/move.html" class="button">Movable Div</a>
-	<a href="http://stuff.shneurnovack.com/Illusion.html" class="button">Color Illusion</a>
-	<a href="http://stuff.shneurnovack.com/Animation-test.html" class="button">Loading Transition Test</a>
-	<a href="https://stuff.shneurnovack.com/game1.html" class="button">HTML div Obstacle Game</a>
+	<a href="https://stuff.shneurnovack.com/game1.html" class="button">Obstacle Game</a>
 	<a href="https://stuff.shneurnovack.com/robotpuppet.html" class="button">Robot Puppet</a>
 	</div>
   </div>
