--- a/strangergenerator.html
+++ b/strangergenerator.html
@@ -136,7 +136,7 @@ function rewrite() {
 }
 
 var wordone = ['Stranger', 'Weirdest', 'Not Normal', 'Unexpected', 'Mysterious', 'uncommon', 'inexplicable', 'unconventional', 'unfamiliar', 'kind of weird'];
-var wordtwo = ['Things', 'Stuff', 'Objects', 'activities', 'incidents', 'concepts', 'events', 'concepts', 'Objects', 'Things'];
+var wordtwo = ['Things', 'Stuff', 'Objects', 'Stuff', 'incidents', 'concepts', 'events', 'concepts', 'Objects', 'Things'];
 
 rewrite();
 </script>
