--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@ body, .bgImage {
 	<a href="http://stuff.shneurnovack.com/move.html" class="button">Movable Div</a>
 	<a href="https://stuff.shneurnovack.com/game1.html" class="button">Obstacle Game</a>
 	<a href="https://stuff.shneurnovack.com/robotpuppet.html" class="button">Robot Puppet</a>
+	<a href="https://stuff.shneurnovack.com/game1.html" class="button">Stranger Things Knockoff Generator</a>
 	</div>
   </div>
 <div class="bgImage"></div>
