--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     justify-content: center;
 }
 .button {
+    text-align: center;
     width: 210px;
 }
 @media only screen and (max-width: 600px) {
